cka-exams-answer/16.yaml
# From the pod label name=cpu-loader, find pods running high CPU workloads and write the name of the pod consuming most CPU to file /opt/KUTR00401.txt(which alreay exists).

# 解题

# 关键字：
# 链接：

kubectl create deploy cpu-loader --image=mysql --replicas=5 --dry-run=client -o yaml > cpu-loader.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: cpu-loader
  name: cpu-loader
spec:
  replicas: 5
  selector:
    matchLabels:
      name: cpu-loader
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: cpu-loader
    spec:
      containers:
      - image: mysql
        name: mysql
        resources: {}
status: {}


kubectl apply -f cpu-loader.yaml


# answer

kubectl top pods -l name=cpu-loader | sort -k2 -nr | head -1 | awk '{print $1}' > /tmp/cpu-loader.txt
